--- a/bin/styles/styles.css
+++ b/bin/styles/styles.css
@@ -80,6 +80,7 @@ html, body {
     position: absolute;
     display: flex;
     flex-flow: column wrap;
+    background: #f4f5f4;
     max-height: 70vh;
     font-size: 0.8em;
     z-index: 40;
@@ -166,9 +167,12 @@ ul.ctx-dropdown, .ctx-dropdown ul {
 }
 
 .context-menu.celestial {
-    background: #f4f5f4;
     min-width: 150px;
     min-height: 250px;
-    align-items: flex-start;
-    width: max-content;
+    z-index: 50;
+}
+.context-menu.application {
+    min-width: 180px;
+    z-index: 60;
+    border-radius: 5px 0;
 }
