--- a/bin/styles/styles.css
+++ b/bin/styles/styles.css
@@ -1,12 +1,6 @@
-@font-face {
-    font-family: nunito-sans;
-    src: url('../fonts/Nunito_Sans/NunitoSans-Regular.ttf');
-}
-
-
 html, body {
     background: rgba(0, 0, 0, 0);
-    font-family: nunito-sans, sans-serif;
+    font-family: 'Quicksand', sans-serif;
     overflow: hidden;
 }
 
@@ -73,6 +67,13 @@ html, body {
     font-weight: bold;
     margin: -3px -5px 5px -5px;
     padding: 3px 5px;
+}
+.overlay-menu.control-panel {
+    right: 150px;
+    bottom: 150px;
+    min-width: 30vw;
+    min-height: 50vh;
+    z-index: 90;
 }
 
 
