--- a/styles/main.css
+++ b/styles/main.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: "Quicksand-Light";
-  src: url("/fonts/Quicksand/Quicksand-Light.ttf"); }
+  src: url("./../fonts/Quicksand/Quicksand-Light.ttf"); }
 
 @font-face {
   font-family: "Quicksand-Regular";
-  src: url("/fonts/Quicksand/Quicksand-Regular.ttf"); }
+  src: url("./../fonts/Quicksand/Quicksand-Regular.ttf"); }
 
 html, body {
   background: rgba(0, 0, 0, 0);
