--- a/styles/main.css
+++ b/styles/main.css
@@ -546,29 +546,33 @@ a {
     max-width: 800px;
     font-size: 1.2em;
     z-index: 50; }
-    .overlay-menu.celestials .celestial:hover {
-      background: unset; }
-    .overlay-menu.celestials .celestial__image {
-      position: relative;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      background: #e1e6e1;
-      width: 100px;
-      height: 100px;
-      border-radius: 50%;
-      box-sizing: border-box;
-      overflow: hidden;
-      transition: background ease 0.25s; }
-    .overlay-menu.celestials .celestial:hover .celestial__image {
-      background: #98d0ae; }
-    .overlay-menu.celestials .celestial--locked .celestial__image {
-      background: #b4b8b4; }
-      .overlay-menu.celestials .celestial--locked .celestial__image img {
-        width: 50px;
-        height: 50px; }
-    .overlay-menu.celestials .celestial--locked:hover .celestial__image {
-      background: #9ea19e; }
+    .overlay-menu.celestials .celestial {
+      cursor: pointer; }
+      .overlay-menu.celestials .celestial:hover {
+        background: unset; }
+      .overlay-menu.celestials .celestial__image {
+        position: relative;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background: #e1e6e1;
+        width: 100px;
+        height: 100px;
+        border-radius: 50%;
+        box-sizing: border-box;
+        overflow: hidden;
+        transition: background ease 0.25s; }
+      .overlay-menu.celestials .celestial:hover .celestial__image {
+        background: #98d0ae; }
+      .overlay-menu.celestials .celestial--locked {
+        cursor: default; }
+        .overlay-menu.celestials .celestial--locked .celestial__image {
+          background: #b4b8b4; }
+          .overlay-menu.celestials .celestial--locked .celestial__image img {
+            width: 50px;
+            height: 50px; }
+        .overlay-menu.celestials .celestial--locked:hover .celestial__image {
+          background: #9ea19e; }
   .overlay-menu.current-celestials {
     max-width: 1000px;
     margin: 0 auto; }
@@ -1412,29 +1416,33 @@ a {
     max-width: 800px;
     font-size: 1.2em;
     z-index: 50; }
-    .overlay-menu.celestials .celestial:hover {
-      background: unset; }
-    .overlay-menu.celestials .celestial__image {
-      position: relative;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      background: #e1e6e1;
-      width: 100px;
-      height: 100px;
-      border-radius: 50%;
-      box-sizing: border-box;
-      overflow: hidden;
-      transition: background ease 0.25s; }
-    .overlay-menu.celestials .celestial:hover .celestial__image {
-      background: #98d0ae; }
-    .overlay-menu.celestials .celestial--locked .celestial__image {
-      background: #b4b8b4; }
-      .overlay-menu.celestials .celestial--locked .celestial__image img {
-        width: 50px;
-        height: 50px; }
-    .overlay-menu.celestials .celestial--locked:hover .celestial__image {
-      background: #9ea19e; }
+    .overlay-menu.celestials .celestial {
+      cursor: pointer; }
+      .overlay-menu.celestials .celestial:hover {
+        background: unset; }
+      .overlay-menu.celestials .celestial__image {
+        position: relative;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background: #e1e6e1;
+        width: 100px;
+        height: 100px;
+        border-radius: 50%;
+        box-sizing: border-box;
+        overflow: hidden;
+        transition: background ease 0.25s; }
+      .overlay-menu.celestials .celestial:hover .celestial__image {
+        background: #98d0ae; }
+      .overlay-menu.celestials .celestial--locked {
+        cursor: default; }
+        .overlay-menu.celestials .celestial--locked .celestial__image {
+          background: #b4b8b4; }
+          .overlay-menu.celestials .celestial--locked .celestial__image img {
+            width: 50px;
+            height: 50px; }
+        .overlay-menu.celestials .celestial--locked:hover .celestial__image {
+          background: #9ea19e; }
   .overlay-menu.current-celestials {
     max-width: 1000px;
     margin: 0 auto; }
